<resources>
    <string name="app_name">Asteroids</string>
    <string name="configurar">SETTINGS</string>
    <string name="sobre">ABOUT</string>
    <string name="sortir">SCORES</string>
    <string name="jugar">PLAY</string>
    <string name="asteroides">Asteroids</string>
    <string name="aboutString">APP: Asteroides \nDEVELOPER: Daniel Angel Ibarra Moran \nCREATION YEAR: 2024 \nLATEST VERSION DATE: 2024-10-21</string>
    <string name="preferencias">Preferences</string>
    <string name="sobreMenu">About...</string>
</resources>