<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/asteroides"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="188dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:capitalize="words"
            android:insetTop="5dp"
            android:insetBottom="5dp"
            android:text="@string/jugar"
            app:cornerRadius="20px" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:capitalize="words"
            android:insetTop="5dp"
            android:insetBottom="5dp"
            android:text="@string/configurar"
            app:cornerRadius="20px" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:capitalize="words"
            android:insetTop="5dp"
            android:insetBottom="5dp"
            android:text="@string/sobre"
            app:cornerRadius="20px" />

        <Button
            android:id="@+id/scoreBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:insetTop="5dp"
            android:insetBottom="5dp"
            android:text="@string/sortir"
            app:cornerRadius="20px" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>